--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/thread/SnifferEntityMid.java=UTF-8
 encoding//src/utils=UTF-8
 encoding/<project>=UTF-8
+encoding/interview_knowledge.txt=UTF-8
